# flowbiz-ai-platform

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/platform_api/: __init__.py  main.py
docs/: INTEGRATION_WITH_CORE.md  PLATFORM_ROADMAP.md
docs/platform/: PLATFORM_SLICE_001_WORKFLOW_EVENT_LEDGER.md  PLATFORM_SLICE_002_JOB_STATUS_PROJECTION.md  PLATFORM_SLICE_003_JOB_ADMISSION.md  PLATFORM_SLICE_004_DISPATCH.md  PLATFORM_SLICE_005_POLICY_QUOTA_GATE.md  PLATFORM_SLICE_006_API_KEY_LIFECYCLE_AUDIT.md  PLATFORM_SLICE_007_API_KEY_ROTATION_AUDIT_HARDENING.md
platform_app/: __init__.py  admission_policy.py  api_key_store.py  auth.py  config.py  core_bridge.py  deps.py  dispatch_records.py  job_records.py  llm.py  observability.py  rate_limit.py  secrets.py  workflow_events.py
platform_app/routes/: __init__.py  platform.py  system.py  workflow_events.py
tests/: conftest.py  test_admission_policy.py  test_api_key_lifecycle.py  test_auth_and_rate_limit.py  test_dispatch_records.py  test_job_records.py  test_llm_and_secrets.py  test_platform_smoke.py  test_workflow_events.py
