[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowbiz-ai-platform"
version = "0.1.0"
description = "Platform implementation layer for FlowBiz AI on top of flowbiz-ai-core"
authors = [{ name = "flowbiz.cloud" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "pydantic-settings",
  "uvicorn[standard]",
  "flowbiz-ai-core==0.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py311"
src = ["apps", "platform_app", "tests"]

[tool.setuptools.packages.find]
include = ["apps*", "platform_app*"]

